@@ -1,7 +1,7 @@
 
 TEST_PROG=../interpreter/mint
 JITTEST_PROG=../mini/mono
-RUNTIME_ARGS=--config tests-config
+RUNTIME_ARGS=--config tests-config --optimize=all
 
 #CSC=csc /unsafe
 CSC=mcs --unsafe -nowarn:0162
@@ -170,7 +170,8 @@ TEST_CS_SRC=			\
 	threadpool1.cs		\
 	base-definition.cs	\
 	bug-27420.cs		\
-	bug-47295.cs
+	bug-47295.cs		\
+	bug-46781.cs
 
 # These only compile with MS CSC
 TEST_CSC_SRC=			\
@@ -178,7 +179,7 @@ TEST_CSC_SRC=			\
 
 TEST_IL_SRC=			\
 	cpblkTest.il		\
-	jmpTest.il		\
+	jmpTest.il			\
 	calliTest.il		\
 	ckfiniteTest.il		\
 	locallocTest.il		\
@@ -197,10 +198,13 @@ EXTRA_DIST=test-driver $(TEST_CS_SRC) $(TEST_IL_SRC)
 %.exe: %.il
 	ilasm -out:$@ $<
 
-%.exe: %.cs
-	$(CSC) -out:$@ $<
+%.exe: %.cs TestDriver.dll
+	$(CSC) -r TestDriver.dll -out:$@ $<
 
 test:	testjit
+
+TestDriver.dll:
+	$(CSC) -target:library -o $@ ../mini/TestDriver.cs
 
 test_cs: $(TEST_PROG) $(TESTSI_CS) libtest.la
 	@failed=0; \
@@ -237,12 +241,33 @@ testb: $(TEST_PROG) $(TESTBS)
 		$(srcdir)/test-driver $(TEST_PROG) $$i $(RUNTIME_ARGS);	\
 	done
 
-testjit: $(TESTSI_CS) $(TESTSI_IL) $(TESTBS) libtest.la
+testjit: $(TESTSI_CS) $(TESTBS) libtest.la
 	@failed=0; \
 	passed=0; \
 	failed_tests="";\
 	export LD_LIBRARY_PATH="`pwd`/.libs:$${LD_LIBRARY_PATH}"; \
-	for i in $(TESTSI_CS) $(TESTSI_IL) $(TESTBS); do	\
+	for i in $(TESTSI_CS) $(TESTBS); do	\
+		rm -f $${i}.so; \
+		if $(srcdir)/test-driver $(JITTEST_PROG) $$i $(RUNTIME_ARGS); \
+		then \
+			passed=`expr $${passed} + 1`; \
+		else \
+			if [ $$? = 2 ]; then break; fi; \
+			failed=`expr $${failed} + 1`; \
+			failed_tests="$${failed_tests} $$i"; \
+		fi \
+	done; \
+	echo "$${passed} test(s) passed. $${failed} test(s) failed."; \
+	if [ $$failed > 0 ]; then echo -e "\nFailed tests:\n"; for i in $${failed_tests}; do echo $${i}; done; fi; 
+
+testaot: $(TESTSI_CS) $(TESTBS) libtest.la
+	@failed=0; \
+	passed=0; \
+	failed_tests="";\
+	export LD_LIBRARY_PATH="`pwd`/.libs:$${LD_LIBRARY_PATH}"; \
+	for i in $(TESTSI_CS) $(TESTBS); do	\
+		rm -f $${i}.so; \
+		$(JITTEST_PROG) --aot $${i} > /dev/null; \
 		if $(srcdir)/test-driver $(JITTEST_PROG) $$i $(RUNTIME_ARGS); \
 		then \
 			passed=`expr $${passed} + 1`; \
@@ -261,9 +286,6 @@ testinterp: $(TESTSI_CS) libtest.la
 	failed_tests="";\
 	export LD_LIBRARY_PATH="`pwd`/.libs:$${LD_LIBRARY_PATH}"; \
 	for i in $(TESTSI_CS) $(TESTSI_IL); do \
-		if [ $$i == thread5.exe ]; then \
-			continue; \
-		fi; \
 		if $(srcdir)/test-driver $(TEST_PROG) $$i $(RUNTIME_ARGS); \
 		then \
 			passed=`expr $${passed} + 1`; \
@@ -292,5 +314,5 @@ INCLUDES = $(GLIB_CFLAGS)
 libtest_la_LDFLAGS = -rpath `pwd`
 libtest_la_SOURCES = libtest.c
 
-CLEANFILES = $(TESTSI_CS) $(TESTSI_IL)
+CLEANFILES = $(TESTSI_CS) $(TESTSI_IL) TestDriver.dll
 
